--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
         "@testing-library/user-event": "^12.8.3",
         "axios": "^0.21.1",
         "bootstrap": "^5.0.1",
-        "expo-constants": "^10.1.3",
         "firebase": "^8.6.6",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -22,12 +21,12 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "preinstall": "npx npm-force-resolutions"
+        "preinstall": "npx npm-force-resolutions",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
