--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://raisgood.github.io/Barkster",
+    "homepage": "https://raisgood.github.io/barkster",
     "name": "barkster",
     "version": "0.1.0",
     "private": true,
